syntax = "proto3";
package api.v1;

option go_package = "./";

service LoggyService {
  rpc StreamLogs(stream StreamLogsRequest) returns (StreamLogsResponse);
  rpc SearchLogs(SearchLogsRequest) returns (SearchLogsResponse);
  rpc GetLogCount(GetLogCountRequest) returns (GetLogCountResponse);
}

message SearchLogsRequest {
  int32 search_id = 1;
  string query = 2;
}

message EmptyResponse {}

message StreamLogsResponse {
  EmptyResponse res = 1;
}

message Log {
  string level = 1;
  string content = 2;
  string origin = 3;
}

message StreamLogsRequest {
  Log log = 1;
}

message SearchLogsResponse {
  int32 total_count = 1;
  repeated Log log = 2;
}

message GetLogCountRequest {
  bool include_archive = 1;
}

message GetLogCountResponse {
  int32 total_count = 1;
  int32 active_count = 2;
  optional int32 archive_count = 3;
}
